LogServ ChangeLog
=============================================================================
1.2 * Mark * 17/2/2003
- We now try to read nick, user, host and realname so these can be configured more 
  easily (M)
- SET interface for nick/user/host/realname added (M)
- Fix up crash on invalid Channel messages (F)

1.1 * Fish * 17/1/2003
- Fixed up help text.
- Fixed a crash when adding the first channel

1.0 - Fish 
- Initial Release