@@ -1,5 +1,8 @@
 LogServ ChangeLog
 =============================================================================
+
+- Fix "CHANS SET #chan URL" command check for correct channel name (D)
+
 1.2 * Mark * 17/2/2003
 - We now try to read nick, user, host and realname so these can be configured more 
   easily (M)
